# Cat-In-Lattice

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  seed.yaml
.github/workflows/: ci.yml
Formula/: cat-in-lattice.rb
data/: quotes.json
decks/cat-in-lattice/: slide-01-cover.html  slide-02-problem.html  slide-03-solution.html  slide-04-ralph.html  slide-05-progress.html  slide-06-scalability.html  slide-outline.md  viewer.html
integrations/claude/commands/: cat-in-lattice.md
integrations/codex/cat-in-lattice/: SKILL.md
scripts/: cat-in-lattice-sidecar.sh
src/: app.rs  config.rs  layout.rs  main.rs  persistence.rs  ui.rs
src/banner/: alerts.rs  mod.rs  quotes.rs  slack.rs
src/cat/: animation.rs  art.rs  events.rs  mod.rs  state.rs
src/games/: breakout.rs  mod.rs  pacman.rs  snake.rs  tetris.rs
src/watcher/: mod.rs
