[package]
name = "cat-in-lattice"
version = "0.1.0"
edition = "2021"
description = "Ghostty companion pane with pixel art cat, banners, and mini-games"
license = "MIT"
repository = "https://github.com/NomaDamas/Cat-In-Lattice"

[[bin]]
name = "cat-in-lattice"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dirs = "5"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
unicode-width = "0.2"
regex = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
